# forecast

./: Cargo.toml  LICENSE  README.md
examples/: config.toml
src/: main.rs  temperature.rs
src/cache/: mod.rs  unqlite.rs
src/config/: args.rs  config.rs  mod.rs  yandex.rs
src/error/: error.rs
src/template/: template.rs
src/weather/: mod.rs  provider.rs  weather.rs
src/yandex/: yandex.rs
