[package]
name = "forecast-get"
version = "0.1.0"
edition = "2021"
include = [
    "src/**/*",
    "examples/*",
    "Cargo.toml",
    "README.md",
    "LICENCE"
]
homepage = "https://github.com/arteev/forecast"
description = "Getting the weather forecast from yandex for embedding in polybar"
repository = "https://github.com/arteev/forecast"

keywords = [
    "cli",
    "forecast",
    "weather"
]
categories = ["command-line-interface"]
license = "MIT"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.136", features = ["derive", "rc"] }
serde_json = "1.0.79"
toml = "0.5.8"
thiserror = "1.0.30"
directories = "4.0.1"
clap = { version = "3.1.6", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde_qs = "0.9.1"
handlebars = "4.2.2"
duration-string = { version = "0.0.6", features = ["serde"] }
unqlite = "1.5.0"
chrono = "0.4.19"